--- a/optuna_on_diabetes_dataset.ipynb
+++ b/optuna_on_diabetes_dataset.ipynb
@@ -581,7 +581,8 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "xN9Zi4k4UbBF",
-        "outputId": "9c88020d-6290-47c5-aba1-0ec98be3c1eb"
+        "outputId": "9c88020d-6290-47c5-aba1-0ec98be3c1eb",
+        "collapsed": true
       },
       "execution_count": 6,
       "outputs": [
@@ -769,7 +770,8 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "0e1a291f-f323-4bbd-f53e-75b4d5b6368d"
+        "outputId": "0e1a291f-f323-4bbd-f53e-75b4d5b6368d",
+        "collapsed": true
       },
       "execution_count": 10,
       "outputs": [
@@ -940,7 +942,8 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "4QKZcma6vYVT",
-        "outputId": "e3822659-fac3-4c02-ab8e-0a8db4de400b"
+        "outputId": "e3822659-fac3-4c02-ab8e-0a8db4de400b",
+        "collapsed": true
       },
       "execution_count": 14,
       "outputs": [
@@ -1434,7 +1437,8 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "lP_GVCWxBf60",
-        "outputId": "bf5dd3e0-1b72-4496-dbdf-0c89806bba6d"
+        "outputId": "bf5dd3e0-1b72-4496-dbdf-0c89806bba6d",
+        "collapsed": true
       },
       "execution_count": 25,
       "outputs": [
